added mongodb connection

--- a/book-store-app/book-api/package.json
+++ b/book-store-app/book-api/package.json
@@ -9,7 +9,8 @@
   "author": "Ashish Kumar",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "mongodb": "^4.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
