api-angular connection established

--- a/book-store-app/book-api/package.json
+++ b/book-store-app/book-api/package.json
@@ -9,6 +9,7 @@
   "author": "Ashish Kumar",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "mongodb": "^4.3.0"
   },
